--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -48,7 +48,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Primary Video Id"
         android:id="@+id/textView2"
-        android:layout_below="@+id/editText"
+        android:layout_alignBaseline="@+id/videoID"
+        android:layout_alignBottom="@+id/videoID"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
