--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -10,17 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/movieName"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
+        android:layout_below="@+id/textView"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/videoID"
-        android:layout_below="@+id/movieName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="77dp" />
+        android:layout_below="@+id/textView2"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -28,8 +30,9 @@
         android:text="Insert Movie"
         android:id="@+id/insertButton"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/textDisplay"
-        android:layout_toStartOf="@+id/textDisplay"
+        android:layout_below="@+id/videoID"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
         android:onClick="addButtonClicked" />
 
     <TextView
@@ -48,8 +51,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Primary Video Id"
         android:id="@+id/textView2"
-        android:layout_alignBaseline="@+id/videoID"
-        android:layout_alignBottom="@+id/videoID"
+        android:layout_below="@+id/movieName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -59,7 +61,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/textDisplay"
-        android:layout_marginTop="51dp"
         android:layout_below="@+id/insertButton"
         android:layout_centerHorizontal="true" />
 
@@ -68,8 +69,8 @@
         android:layout_height="wrap_content"
         android:text="Delete Movie"
         android:id="@+id/deleteButton"
-        android:layout_alignTop="@+id/insertButton"
-        android:layout_toRightOf="@+id/textDisplay"
+        android:layout_below="@+id/videoID"
+        android:layout_toRightOf="@+id/insertButton"
         android:layout_toEndOf="@+id/textDisplay"
         android:onClick="deleteButtonClicked" />
 </RelativeLayout>
